Add Arnold page.

--- a/app/_posts/2015-03-01-Arnold.md
+++ b/app/_posts/2015-03-01-Arnold.md
@@ -2,14 +2,224 @@
 layout: place
 weight:  2
 title:  "Arnold"
-subtitle: "--"
+subtitle: "Estúdio de design"
 description: " é um estúdio de design."
 address: "Avenida Prestes Maia, 241, República."
 coordinates: "-23º 32’ 32.45” -46º 38’ 6.30”"
-enabled: disabled
+enabled: enabled
+photo: "arnold.jpg"
+coverClass: "arnold"
+shareImage: "CENTRO_share_arnold.jpg"
 permalink: "arnold.html"
 top: "45.6%"
 left: "51.8%"
 bottom: "50.2%"
 letter: "A"
 ---
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <p>De uma das novecentas salas do Mirante do Vale, o prédio mais alto de São Paulo, os designers do <a href="http://estudioarnold.cc/" target="_blank">Arnold</a> têm uma vista privilegiada da cidade: começa no Vale do Anhangabaú, passa pelo caos urbano do centro e chega às montanhas que cercam São Paulo.</p>
+      <p>Fundado há cinco anos, o estúdio começou com seis integrantes, chegou a nove e hoje tem três membros fixos. Espalhados por São Paulo, Berlim e Nova York, os outros membros colaboram de forma remota em projetos específicos. Como o resto da prática do Arnold, o modelo é difícil de classificar — algo entre estúdio de design e grupo de amigos.</p>
+      <p>Em 2011, ainda na faculdade, lançaram o primeiro trabalho como Arnold. Uma publicação para a <a href="http://cargocollective.com/fanfunzine" target="_blank">Fanfunzine</a>, um dos primeiros eventos dessa nova leva de feiras de publicações independentes, na Universidade de São Paulo. Chamado Aposta, o fanzine listava previsões para o futuro.</p>
+      <p>Desde então, vieram outros projetos independentes (um deles, inclusive, este Centro) e um número crescente de projetos comerciais. O primeiro deles, a identidade visual da <a href="https://www.facebook.com/gralias/" target="_blank">Gralias</a>, consolidou a proposta de design do estúdio, baseada em pesquisa e diálogo próximo com clientes.</p>
+    </div>
+  </div>
+  <div class="location row">
+    <div class="col-md-4 col-md-offset-4 text-center"> 
+      <span class="company">Arnold</span>
+      <span class="address">Avenida Prestes Maia, 241, República</span>
+      <span class="coordinates">-23º 32’ 32.45” -46º 38’ 6.30”</span>
+      <div class="compass"></div>
+    </div>
+  </div>
+</div>
+
+<div class="centro-container">
+  <!-- bloco 1 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text">
+        <p>
+          <span class="plantin">
+            No começo, tivemos que nos adaptar ao prédio, muito por termos trabalhado em outras regiões, mas foi algo que cresceu com a gente. Nós começamos a criar uma convivência com as pessoas, como o pessoal da galeria Lama, que conhecemos numa conversa de elevador.
+          </span>
+          <span class="dia">
+            <strong>Lucas Andrade</strong>
+          </span>
+        </p>
+        <p>
+          <span class="caption right desktop-only">
+            Mirante do Vale, o prédio mais alto de São Paulo.
+          </span>
+        </p>
+      </div>
+      <div class="col-md-8 pull-right">
+      	<div class="show-smooth" style="padding:0">
+          <img src="img/content/arnold/arnold-centro-01.jpg">
+      	</div>
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 col-md-offset-6 show-smooth">
+        <img src="img/content/arnold/arnold-centro-02.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom double">
+      <div class="col-md-4 col-md-offset-6 show-smooth">
+        <img src="img/content/arnold/arnold-centro-03.jpg">
+        <p>
+          <span class="caption top mobile-only">
+            Mirante do Vale, o prédio mais alto de São Paulo.
+          </span>
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 2 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text f-right">
+        <p>
+          <span class="plantin">
+            O centro se reflete no nosso trabalho. A gente tira inspiração da arquitetura, do design. De tomar um café no Copan, ver as serigrafias da Galeria do Rock, almoçar no Ita. Tem coisas mais práticas também, como usar as gráficas da região.
+          </span>
+          <span class="dia">
+            <strong>Murilo Fonseca</strong>
+          </span>
+        </p>
+        <p>
+          <span class="caption left desktop-only">
+            Arredores do Arnold, que fica no bairro da República.
+          </span>
+        </p>
+      </div>
+      <div class="col-md-8 show-smooth">
+        <img src="img/content/arnold/arnold-centro-04.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 col-md-offset-2 show-smooth">
+        <img src="img/content/arnold/arnold-centro-05.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom double">
+      <div class="col-md-6 col-md-offset-2 show-smooth">
+        <img src="img/content/arnold/arnold-centro-06.jpg">
+        <p>
+          <span class="caption top mobile-only">
+            Arredores do Arnold, que fica no bairro da República.
+          </span>
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 3 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text">
+        <p>
+          <span class="plantin">
+            As pessoas que estão no centro não eram o público do nosso trabalho. Mas como estamos aqui, nós começamos a rever isso. A gente não quer se enfiar num canto mais cultural da cidade e trabalhar apenas para as pessoas que estão nesse canto.
+          </span>
+          <span class="dia">
+            <strong>Victor de Bone</strong>
+          </span>
+        </p>
+        <p>
+          <span class="caption right desktop-only">
+            Espaço de trabalho. Murilo Fonseca, um dos designers do estúdio.
+          </span>
+        </p>
+      </div>
+      <div class="col-md-6 f-right col-md-offset-right-2 show-smooth">
+      	<div class="show-smooth" style="padding:0">
+          <img src="img/content/arnold/arnold-centro-07.jpg">
+      	</div>
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 col-md-offset-4 show-smooth">
+        <img src="img/content/arnold/arnold-centro-08.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom double">
+      <div class="col-md-6 col-md-offset-6 show-smooth">
+        <img src="img/content/arnold/arnold-centro-09.jpg">
+        <p>
+          <span class="caption top mobile-only">
+            Espaço de trabalho. Murilo Fonseca, um dos designers do estúdio.
+          </span>
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 4 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text f-right">
+        <p>
+          <span class="plantin">
+            Lugares como a Berrini foram planejados para servir como centro comercial. Eles ficam desertos no final de semana. Aqui é diferente. Os lugares e as pessoas têm mais história. Você encontra um monte de coisas numa saída rápida para um café.
+          </span>
+          <span class="dia">
+            <strong>Murilo Fonseca</strong>
+          </span>
+        </p>
+        <p><span class="caption left desktop-only">Arredores do escritório. Lucas Andrade, um dos designers do Arnold.</span></p>
+      </div>
+      <div class="col-md-8 show-smooth">
+        <img src="img/content/arnold/arnold-centro-10.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-4 col-md-offset-4 show-smooth">
+        <img src="img/content/arnold/arnold-centro-11.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom double">
+      <div class="col-md-6 col-md-offset-2 show-smooth">
+        <img src="img/content/arnold/arnold-centro-12.jpg">
+        <p><span class="caption top mobile-only">Arredores do escritório. Lucas Andrade, um dos designers do Arnold.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 5 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text">
+        <p>
+          <span class="plantin">
+            Nossa ideia com esse trabalho era unir qualidade técnica do design estrangeiro com algo mais brasileiro e espontâneo. Nós representamos isso com tipografia. Montamos um conjunto mais rígido, modernista, mas que mantém as imperfeições dos tipos móveis de madeira.
+          </span>
+          <span class="dia">
+            <strong>Victor de Bone</strong>
+          </span>
+        </p>
+        <p><br><span class="caption right desktop-only">Pôsteres e fanzines feitos por membros do estúdio.</span></p>
+      </div>
+      <div class="col-md-8 pull-right">
+      	<div class="show-smooth" style="padding:0">
+          <img src="img/content/arnold/arnold-centro-13.jpg">
+      	</div>
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 col-md-offset-4 show-smooth">
+        <img src="img/content/arnold/arnold-centro-14.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom double">
+      <div class="col-md-6 col-md-offset-6 show-smooth">
+        <img src="img/content/arnold/arnold-centro-15.jpg">
+        <p><span class="caption top mobile-only">Pôsteres e fanzines feitos por membros do estúdio.</span></p>
+      </div>
+    </div>
+  </div>
+
+</div>
