Minor updates on Arnold page.

--- a/app/_posts/2015-03-01-Arnold.md
+++ b/app/_posts/2015-03-01-Arnold.md
@@ -22,7 +22,7 @@ letter: "A"
     <div class="col-md-10 col-md-offset-1">
       <p>De uma das novecentas salas do Mirante do Vale, o prédio mais alto de São Paulo, os designers do <a href="http://estudioarnold.cc/" target="_blank">Arnold</a> têm uma vista privilegiada da cidade: começa no Vale do Anhangabaú, passa pelo caos urbano do centro e chega às montanhas que cercam São Paulo.</p>
       <p>Fundado há cinco anos, o estúdio começou com seis integrantes, chegou a nove e hoje tem três membros fixos. Espalhados por São Paulo, Berlim e Nova York, os outros membros colaboram de forma remota em projetos específicos. Como o resto da prática do Arnold, o modelo é difícil de classificar — algo entre estúdio de design e grupo de amigos.</p>
-      <p>Em 2011, ainda na faculdade, lançaram o primeiro trabalho como Arnold. Uma publicação para a <a href="http://cargocollective.com/fanfunzine" target="_blank">Fanfunzine</a>, um dos primeiros eventos dessa nova leva de feiras de publicações independentes, na Universidade de São Paulo. Chamado Aposta, o fanzine listava previsões para o futuro.</p>
+      <p>Em 2011, ainda na faculdade, lançaram o primeiro trabalho como Arnold. Uma publicação para a <a href="http://cargocollective.com/fanfunzine" target="_blank">Fanfunzine</a>, um dos primeiros eventos dessa nova leva de feiras de publicações independentes, na Universidade de São Paulo. Chamado Aposta, listava previsões para o futuro.</p>
       <p>Desde então, vieram outros projetos independentes (um deles, inclusive, este Centro) e um número crescente de projetos comerciais. O primeiro deles, a identidade visual da <a href="https://www.facebook.com/gralias/" target="_blank">Gralias</a>, consolidou a proposta de design do estúdio, baseada em pesquisa e diálogo próximo com clientes.</p>
     </div>
   </div>
@@ -51,7 +51,7 @@ letter: "A"
         </p>
         <p>
           <span class="caption right desktop-only">
-            Mirante do Vale, o prédio mais alto de São Paulo.
+            Mirante do Vale, no centro de São Paulo.
           </span>
         </p>
       </div>
@@ -71,7 +71,7 @@ letter: "A"
         <img src="img/content/arnold/arnold-centro-03.jpg">
         <p>
           <span class="caption top mobile-only">
-            Mirante do Vale, o prédio mais alto de São Paulo.
+            Mirante do Vale, no centro de São Paulo.
           </span>
         </p>
       </div>
@@ -92,7 +92,7 @@ letter: "A"
         </p>
         <p>
           <span class="caption left desktop-only">
-            Arredores do Arnold, que fica no bairro da República.
+            Arredores do Arnold, localizado na República.
           </span>
         </p>
       </div>
@@ -110,7 +110,7 @@ letter: "A"
         <img src="img/content/arnold/arnold-centro-06.jpg">
         <p>
           <span class="caption top mobile-only">
-            Arredores do Arnold, que fica no bairro da República.
+            Arredores do Arnold, localizado na República.
           </span>
         </p>
       </div>
@@ -131,7 +131,7 @@ letter: "A"
         </p>
         <p>
           <span class="caption right desktop-only">
-            Espaço de trabalho. Murilo Fonseca, um dos designers do estúdio.
+            Espaço de trabalho e o fanzine Vide Verso Validade.
           </span>
         </p>
       </div>
@@ -151,7 +151,7 @@ letter: "A"
         <img src="img/content/arnold/arnold-centro-09.jpg">
         <p>
           <span class="caption top mobile-only">
-            Espaço de trabalho. Murilo Fonseca, um dos designers do estúdio.
+            Espaço de trabalho e o fanzine Vide Verso Validade.
           </span>
         </p>
       </div>
@@ -170,7 +170,11 @@ letter: "A"
             <strong>Murilo Fonseca</strong>
           </span>
         </p>
-        <p><span class="caption left desktop-only">Arredores do escritório. Lucas Andrade, um dos designers do Arnold.</span></p>
+        <p>
+          <span class="caption left desktop-only">
+            Arredores do escritório. Lucas Andrade e Murilo Fonseca, designers do Arnold.
+          </span>
+        </p>
       </div>
       <div class="col-md-8 show-smooth">
         <img src="img/content/arnold/arnold-centro-10.jpg">
@@ -184,7 +188,11 @@ letter: "A"
     <div class="row margin-bottom double">
       <div class="col-md-6 col-md-offset-2 show-smooth">
         <img src="img/content/arnold/arnold-centro-12.jpg">
-        <p><span class="caption top mobile-only">Arredores do escritório. Lucas Andrade, um dos designers do Arnold.</span></p>
+        <p>
+          <span class="caption top mobile-only">
+            Arredores do escritório. Lucas Andrade e Murilo Fonseca, designers do Arnold.
+          </span>
+        </p>
       </div>
     </div>
   </div>
@@ -195,13 +203,17 @@ letter: "A"
       <div class="col-md-4 show-smooth fixie-text">
         <p>
           <span class="plantin">
-            Nossa ideia com esse trabalho era unir qualidade técnica do design estrangeiro com algo mais brasileiro e espontâneo. Nós representamos isso com tipografia. Montamos um conjunto mais rígido, modernista, mas que mantém as imperfeições dos tipos móveis de madeira.
+            Nossa ideia com esse trabalho era unir a qualidade técnica do design estrangeiro com algo mais brasileiro e espontâneo. Representamos isso com tipografia. Montamos um conjunto mais rígido, modernista, mas que mantém as imperfeições dos tipos móveis de madeira.
           </span>
           <span class="dia">
             <strong>Victor de Bone</strong>
           </span>
         </p>
-        <p><br><span class="caption right desktop-only">Pôsteres e fanzines feitos por membros do estúdio.</span></p>
+        <p>
+          <span class="caption right desktop-only">
+            Pôsteres e fanzines feitos pelo estúdio.
+          </span>
+        </p>
       </div>
       <div class="col-md-8 pull-right">
       	<div class="show-smooth" style="padding:0">
@@ -217,7 +229,11 @@ letter: "A"
     <div class="row margin-bottom double">
       <div class="col-md-6 col-md-offset-6 show-smooth">
         <img src="img/content/arnold/arnold-centro-15.jpg">
-        <p><span class="caption top mobile-only">Pôsteres e fanzines feitos por membros do estúdio.</span></p>
+        <p>
+          <span class="caption top mobile-only">
+            Pôsteres e fanzines feitos pelo estúdio.
+          </span>
+        </p>
       </div>
     </div>
   </div>
